Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-5957

DCHECK attempts to print non-string as a c-style string

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • Impala 2.11.0
    • Impala 2.11.0
    • Backend

    Description

      The intention of the below code is to print the memory address, but the type is uint8_t* instead of void*.

          DCHECK_EQ(reinterpret_cast<uintptr_t>(mem) % HUGE_PAGE_SIZE, 0) << mem;
      

      Severity/risk is low because this is only printed if the process is in the process of crashing.

      Attachments

        Activity

          People

            tarmstrong Tim Armstrong
            tarmstrong Tim Armstrong
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: