IMPALA-5957: print memory address, not memory

The bug is that the pointer was a uint8_t*, which C++ iostreams
print as a C-style string. The intent was to instead print the
memory address, which happens for void*. To avoid the subtlety,
instead convert to uintptr_t and print as hex.

Change-Id: I89250646bf683dd2d636dcb37a66ceb0428af8b2
Reviewed-on: http://gerrit.cloudera.org:8080/8371
Reviewed-by: anujphadke <aphadke@cloudera.com>
Reviewed-by: Dan Hecht <dhecht@cloudera.com>
Tested-by: Impala Public Jenkins